2.5 (#1748)
* test

* 2.5 bump, plus some tender love and care

* entity manager

* disaable 2 tests

* disaable 1 test1

* disaable 2 tests

* disaable 1 tests

* NOJIRA fikser avsluttbehandlingtest

* NOJIRA vekk med FpDateUtil

* fjernet factorypath

Co-authored-by: Jens-Otto Larsen <jens-otto.larsen@nav.no>